--- a/package.json
+++ b/package.json
@@ -43,11 +43,12 @@
     "@tarojs/taro-swan": "1.3.29",
     "@tarojs/taro-tt": "1.3.29",
     "@tarojs/taro-weapp": "1.3.29",
-    "nervjs": "^1.5.5",
     "nerv-devtools": "^1.5.5",
+    "nervjs": "^1.5.5",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "taro-ui": "^2.2.4"
   },
   "devDependencies": {
     "@types/react": "^16.4.8",
